--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
 <div class="container">
 
 
-<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false" style="margin-left: -10px" >
+<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="true" style="margin-left: -10px" >
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -39,7 +39,7 @@
 <br>
     <div class="jumbotron" style="margin-top: -20px">
   <h1 class="display-4 text-white sdredlight">Welcome, To Frank Sport Co., Ltd.!</h1>
-  <h5 class="lead text-white sdyel">ยินดีต้อนรับเข้าสู่เว็บไซต์ Frank Sport Co., Ltd. </h5>
+  <h5 class="lead text-white sdyel">ยินดีต้อนรับเข้าสู่เว็บไซต์ Frank Sport Co., Ltd.55 </h5>
 
 </div>
 
