--- a/templates/home.html
+++ b/templates/home.html
@@ -39,7 +39,7 @@
 <br>
     <div class="jumbotron" style="margin-top: -20px">
   <h1 class="display-4 text-white sdredlight">Welcome, To Frank Sport Co., Ltd.!</h1>
-  <h5 class="lead text-white sdyel">ยินดีต้อนรับเข้าสู่เว็บไซต์ Frank Sport Co., Ltd.55 </h5>
+  <h5 class="lead text-white sdyel">ยินดีต้อนรับเข้าสู่เว็บไซต์ Frank Sport Co., Ltd. </h5>
 
 </div>
 
