--- a/templates/menu.html
+++ b/templates/menu.html
@@ -9,10 +9,10 @@
               </div>
               <ul class="list-group list-group-flush ">
                   <li onclick="location.href='{% url 'home' %}';" style="cursor:pointer;" class="list-group-item text-white  bg-transparent"><h4 class=" sdrl">หน้าหลัก <i class="fa-sharp fa-solid fa-house"></i>  </h4></li>
-                 <li onclick="location.href='{% url 'firstweb' %}';" style="cursor:pointer;" class="list-group-item text-white  bg-transparent"><h4 class="sdrl">ประวัติส่วนตัว</h4></li>
-                 <li onclick="location.href='{% url 'secondpage' %}';" style="cursor:pointer;" class="list-group-item text-white  bg-transparent"><h4  class="sdrl">ประวัติการศึกษา</h4></li>
-                 <li onclick="location.href='{% url 'thirdpage' %}';" style="cursor:pointer;" class="list-group-item text-white  bg-transparent"><h4  class="sdrl">สิ่งที่สนใจ</h4></li>
-                  <li onclick="location.href='{% url 'product' %}';"  style="cursor:pointer;" class="list-group-item text-white  bg-transparent"><h4  class="sdrl">สินค้าที่ขาย</h4></li>
-                  <li onclick="location.href='{% url 'idol' %}';"  style="cursor:pointer;" class="list-group-item text-white  bg-transparent"><h4  class="sdrl">บุคคลต้นแบบ</h4></li>
-                   <li onclick="location.href='{% url 'hny' %}';"  style="cursor:pointer;" class="list-group-item text-white  bg-transparent"><h4  class="sdrl">hny</h4></li>
+                 <li onclick="location.href='/ProfileApp/firstweb';" style="cursor:pointer;" class="list-group-item text-white  bg-transparent"><h4 class="sdrl">ประวัติส่วนตัว</h4></li>
+                 <li onclick="location.href='/ProfileApp/secondpage';" style="cursor:pointer;" class="list-group-item text-white  bg-transparent"><h4  class="sdrl">ประวัติการศึกษา</h4></li>
+                 <li onclick="location.href='/ProfileApp/thirdpage';" style="cursor:pointer;" class="list-group-item text-white  bg-transparent"><h4  class="sdrl">สิ่งที่สนใจ</h4></li>
+                  <li onclick="location.href='/ProfileApp/product';"  style="cursor:pointer;" class="list-group-item text-white  bg-transparent"><h4  class="sdrl">สินค้าที่ขาย</h4></li>
+                  <li onclick="location.href='/ProfileApp/idol';"  style="cursor:pointer;" class="list-group-item text-white  bg-transparent"><h4  class="sdrl">บุคคลต้นแบบ</h4></li>
+                   <li onclick="location.href='/ProfileApp/hny';"  style="cursor:pointer;" class="list-group-item text-white  bg-transparent"><h4  class="sdrl">hny</h4></li>
               </ul>
