--- a/templates/footer.html
+++ b/templates/footer.html
@@ -6,12 +6,12 @@
             <div class="social"> <ion-icon  size="large" name="logo-facebook"> </ion-icon>&nbsp;&nbsp;&nbsp;<ion-icon size="large" name="logo-instagram"></ion-icon>
             &nbsp;&nbsp;<ion-icon  size="large" name="logo-youtube"></ion-icon> &nbsp;&nbsp;<ion-icon size="large" name="logo-snapchat"></ion-icon>    </div>
             <ul class="list-inline">
-                <li class="list-inline-item"><a href="{% url 'home' %}">Home</a></li>
-                <li class="list-inline-item"><a href="{% url 'firstweb' %}">Profile</a></li>
-                <li class="list-inline-item"><a href="{% url 'secondpage' %}">Educational</a></li>
-                <li class="list-inline-item"><a href="{% url 'thirdpage' %}">Interests</a></li>
-                <li class="list-inline-item"><a href="{% url 'product' %}">Product</a></li>
-                <li class="list-inline-item"><a href="{% url 'idol' %}">Role Model</a></li>
+                <li class="list-inline-item"><a href="/">Home</a></li>
+                <li class="list-inline-item"><a href="/ProfileApp/firstweb">Profile</a></li>
+                <li class="list-inline-item"><a href="/ProfileApp/secondpage">Educational</a></li>
+                <li class="list-inline-item"><a href="/ProfileApp/thirdpage">Interests</a></li>
+                <li class="list-inline-item"><a href="/ProfileApp/product">Product</a></li>
+                <li class="list-inline-item"><a href="/ProfileApp/idol">Role Model</a></li>
             </ul>
             <p class="copyright" style="font-size: 12pt" >Frank Sport Co., Ltd. © 2022</p>
         </footer>
