--- a/templates/menu.html
+++ b/templates/menu.html
@@ -8,11 +8,11 @@
                   <hr>
               </div>
               <ul class="list-group list-group-flush ">
-                  <li onclick="location.href='{% url 'home' %}';" style="cursor:pointer;" class="list-group-item text-white  bg-transparent"><h4 class=" sdrl">หน้าหลัก <i class="fa-sharp fa-solid fa-house"></i>  </h4></li>
+                  <li onclick="location.href='/';" style="cursor:pointer;" class="list-group-item text-white  bg-transparent"><h4 class=" sdrl">หน้าหลัก <i class="fa-sharp fa-solid fa-house"></i>  </h4></li>
                  <li onclick="location.href='/ProfileApp/firstweb';" style="cursor:pointer;" class="list-group-item text-white  bg-transparent"><h4 class="sdrl">ประวัติส่วนตัว</h4></li>
                  <li onclick="location.href='/ProfileApp/secondpage';" style="cursor:pointer;" class="list-group-item text-white  bg-transparent"><h4  class="sdrl">ประวัติการศึกษา</h4></li>
                  <li onclick="location.href='/ProfileApp/thirdpage';" style="cursor:pointer;" class="list-group-item text-white  bg-transparent"><h4  class="sdrl">สิ่งที่สนใจ</h4></li>
                   <li onclick="location.href='/ProfileApp/product';"  style="cursor:pointer;" class="list-group-item text-white  bg-transparent"><h4  class="sdrl">สินค้าที่ขาย</h4></li>
                   <li onclick="location.href='/ProfileApp/idol';"  style="cursor:pointer;" class="list-group-item text-white  bg-transparent"><h4  class="sdrl">บุคคลต้นแบบ</h4></li>
-                   <li onclick="location.href='/ProfileApp/hny';"  style="cursor:pointer;" class="list-group-item text-white  bg-transparent"><h4  class="sdrl">hny</h4></li>
+
               </ul>
