--- a/static/stylesheets/font.css
+++ b/static/stylesheets/font.css
@@ -37,5 +37,12 @@ a{
     font-size: 1.5em;
 }
 
-
+td{
+    font-family: "MN_ADVENTURE",sans-serif;
+    font-size: 1.5em;
+}
+th{
+    font-family: "MN_ADVENTURE",sans-serif;
+    font-size: 1.7em;
+}
 
