--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
+
 {% load static %}
 {% load fontawesome_6 %}
+{% fontawesome_6_static %}
 
 <html lang="en">
 <link rel="stylesheet" type="text/css" href="{% static 'stylesheets/bt523/css/bootstrap.css' %}">
@@ -47,7 +49,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
 
-<script src="https://kit.fontawesome.com/5e8fd480ec.js" crossorigin="anonymous"></script>
+
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
