--- a/templates/menu.html
+++ b/templates/menu.html
@@ -14,5 +14,9 @@
                  <li onclick="location.href='/ProfileApp/thirdpage';" style="cursor:pointer;" class="list-group-item text-white  bg-transparent"><h4  class="sdrl">สิ่งที่สนใจ</h4></li>
                   <li onclick="location.href='/ProfileApp/product';"  style="cursor:pointer;" class="list-group-item text-white  bg-transparent"><h4  class="sdrl">สินค้าที่ขาย</h4></li>
                   <li onclick="location.href='/ProfileApp/idol';"  style="cursor:pointer;" class="list-group-item text-white  bg-transparent"><h4  class="sdrl">บุคคลต้นแบบ</h4></li>
+                    <li onclick="location.href='/ProfileApp/showmydata';"  style="cursor:pointer;" class="list-group-item text-white  bg-transparent"><h4  class="sdrl">mydata</h4></li>
+                     <li onclick="location.href='/ProfileApp/showOurproduct';"  style="cursor:pointer;" class="list-group-item text-white  bg-transparent"><h4  class="sdrl">ShowProduct</h4></li>
+                  <li onclick="location.href='/ProfileApp/newProduct';"  style="cursor:pointer;" class="list-group-item text-white  bg-transparent"><h4  class="sdrl">newProduct</h4></li>
+                    <li onclick="location.href='/ProfileApp/frmProduct';"  style="cursor:pointer;" class="list-group-item text-white  bg-transparent"><h4  class="sdrl">frmProduct</h4></li>
 
               </ul>
