--- a/templates/menu.html
+++ b/templates/menu.html
@@ -18,5 +18,7 @@
                      <li onclick="location.href='/ProfileApp/showOurproduct';"  style="cursor:pointer;" class="list-group-item text-white  bg-transparent"><h4  class="sdrl">ShowProduct</h4></li>
                   <li onclick="location.href='/ProfileApp/newProduct';"  style="cursor:pointer;" class="list-group-item text-white  bg-transparent"><h4  class="sdrl">newProduct</h4></li>
                     <li onclick="location.href='/ProfileApp/frmProduct';"  style="cursor:pointer;" class="list-group-item text-white  bg-transparent"><h4  class="sdrl">frmProduct</h4></li>
-
+                  <li onclick="location.href='/ProfileApp/inputProduct';"  style="cursor:pointer;" class="list-group-item text-white  bg-transparent"><h4  class="sdrl">inputProduct</h4></li>
+                    <li onclick="location.href='/ProfileApp/listProduct';"  style="cursor:pointer;" class="list-group-item text-white  bg-transparent"><h4  class="sdrl">listProduct</h4></li>
+             <li onclick="location.href='/ProfileApp/pro_retriveAll';"  style="cursor:pointer;" class="list-group-item text-white  bg-transparent"><h4  class="sdrl">listProduct</h4></li>
               </ul>
