--- a/templates/showmydata.html
+++ b/templates/showmydata.html
@@ -14,89 +14,48 @@
             <h3 class="text-white text-center sdred2">I'm {{ name }} {{ surname }}</h3>
             <table class="table  text-white table-hover border">
                 <tr>
-                    <td>
-                        name
-                    </td>
-                    <td>
-                        {{ name }}
-                    </td>
+                    <td>name</td>
+                    <td>{{ name }}</td>
                 </tr>
                  <tr>
+                    <td>surname</td>
                     <td>
-                        surname
-                    </td>
-                    <td>
-                        {{ surname }}
-                    </td>
+                        {{ surname }}</td>
                 </tr>
                 <tr>
-                    <td>
-                        gender
-                    </td>
-                    <td>
-                        {{ gender }}
-                    </td>
+                    <td>gender</td>
+                    <td>{{ gender }}</td>
                 </tr>
                  <tr>
-                    <td>
-                        status
-                    </td>
-                    <td>
-                        {{ status }}
-                    </td>
+                    <td>status</td>
+                    <td>{{ status }}</td>
                 </tr>
                  <tr>
-                    <td>
-                        work
-                    </td>
-                    <td>
-                        {{ work }}
-                    </td>
-                </tr>
-
-                    <tr>
-                    <td>
-                        education
-                    </td>
-                    <td>
-                        {{ education }}
-                    </td>
-                </tr>
-                 <tr>
-                    <td>
-                        address
-                    </td>
-                    <td>
-                        {{ address }}
-                    </td>
-                </tr>
-
-
-                <tr>
-                    <td>
-                        My Favorite
-                    </td>
-                    <td>
-                        {{ favorite }}
-                    </td>
-                </tr>
-
-                <tr>
-                    <td>
-                        tel
-                    </td>
-                    <td>
-                        {{ tel }}
-                    </td>
+                    <td>work</td>
+                    <td>{{ work }}</td>
                 </tr>
                     <tr>
-                    <td>
-                        Facebook
-                    </td>
-                    <td>
-                       <a class="text-white" href="https://www.facebook.com/profile.php?id=100010114005989" style="font-size: 16pt">{{ fb }}</a>
+                    <td>education</td>
+                    <td>{{ education }}</td>
+                </tr>
+                 <tr>
+                    <td>address</td>
+                    <td>{{ address }}</td>
+                </tr>
 
-                    </td>
+
+                <tr>
+                    <td>My Favorite</td>
+                    <td>{{ favorite }}</td>
+                </tr>
+
+                <tr>
+                    <td>tel</td>
+                    <td>{{ tel }}</td>
+                </tr>
+                    <tr>
+                    <td>Facebook</td>
+                    <td><a class="text-white" href="https://www.facebook.com/profile.php?id=100010114005989" style="font-size: 16pt">{{ fb }}</a></td>
                 </tr>
             </table>
         </div>
@@ -127,31 +86,10 @@
             <div class="col-lg-2"></div>
 
         </div>
-
-
-
-
     <div class="text-center">
         <a class="btn btn-danger" href="/ProfileApp/home"><i class="text-white fa-solid fa-home"></i></a>
-
     </div>
-
-
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 {% endblock %}
