--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,19 @@
         </div>
         <div class="col-lg-9  text-success">
 
+            {% for message in messages %}
+            <div class="alert alert-{{ message.tags }} alert-dismissible"
+            role="alert">
+            <button type="button" class="close" data-dismiss="alert"
+            aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+            </button>
+            {{ message | safe }}
+            </div>
+            {% endfor %}
+
+
+
         {% block content %}
 
             {% endblock %}
