--- a/templates/menu.html
+++ b/templates/menu.html
@@ -21,4 +21,8 @@
                   <li onclick="location.href='/ProfileApp/inputProduct';"  style="cursor:pointer;" class="list-group-item text-white  bg-transparent"><h4  class="sdrl">inputProduct</h4></li>
                     <li onclick="location.href='/ProfileApp/listProduct';"  style="cursor:pointer;" class="list-group-item text-white  bg-transparent"><h4  class="sdrl">listProduct</h4></li>
              <li onclick="location.href='/ProfileApp/pro_retriveAll';"  style="cursor:pointer;" class="list-group-item text-white  bg-transparent"><h4  class="sdrl">pro_retriveAll</h4></li>
+
+             <li onclick="location.href='/ProfileApp/showGoodsAll';"  style="cursor:pointer;" class="list-group-item text-white  bg-transparent"><h4  class="sdrl">showGoodsAll</h4></li>
+              <li onclick="location.href='/ProfileApp/showCusAll';"  style="cursor:pointer;" class="list-group-item text-white  bg-transparent"><h4  class="sdrl">showCusAll</h4></li>
+
               </ul>
